syntax = "proto3";

// import "account_receivable_register_mandate_bifast_esb_core.proto";
import "google/protobuf/timestamp.proto";


package account_receivable_register_mandate_bifast_esb.service.v1;
option go_package = "./pb";

// #region General Request and Reuseable

message GeneralBodyResponse {
  string process_id = 1;
  bool error = 2;
  uint32 code = 3;
  string message = 4;
};

message ErrorBodyResponse{
  bool error = 1;
  uint32 code = 2;
  string message = 3;
};


// #endregion

message MandateManagementData {
  string company_code = 1;
  string company_name = 2;
  uint64 mandate_category_id = 3;
  string mandate_code = 4;
  string credit_account_number = 5;
  uint64 mandate_type_id = 6;
  string counter_party_account_number = 7;
  string counter_party_name = 8;
  string counter_party_account_status = 9;
  string payer_bank = 10;
  uint64 amount_type_id = 11;
  double transaction_amount = 12;
  uint64 transaction_frequency_id = 13;
  string no_of_installment = 14;
  string effective_date = 15;
  string expired_date = 16;
  string remarks = 17;
  string address = 18;
  string phone_number = 19;
  string email_address = 20;
  string batch_reff_no = 21;
};

message RegisterMandateBiFastRequest{
  string app_key = 1;
  string process_id = 2;
  uint64 batch_id = 3;
  uint64 mandate_batch_detail_id=4;
  string mandate_code=5;
  
  BifastRequestData request = 6;
}
message RegisterMandateBiFastResponse{
  string process_id = 1;
  bool error = 2;
  uint32 code = 3;
  string message = 4;
}
message BifastRequest {
  BifastRequestData request = 1 [json_name = "request"];
}

message BifastRequestData {
  string reff_num = 1 [json_name = "reffNum"];
  string external_id = 2 [json_name = "externalId"];
  string amount_type = 3 [json_name = "amountType"];
  string category_purpose = 4 [json_name = "categoryPurpose"];
  string direct_debit_type = 5 [json_name = "directDebitType"];
  string sequence_type = 6 [json_name = "sequenceType"];
  string frequency_period_type = 7 [json_name = "frequencyPeriodType"];
  string count_per_period = 8 [json_name = "countPerPeriod"];
  string from_date = 9 [json_name = "fromDate"];
  string to_date = 10 [json_name = "toDate"];
  string first_coll_date = 11 [json_name = "firstCollDate"];
  string final_coll_date = 12 [json_name = "finalCollDate"];
  string first_coll_amount = 13 [json_name = "firstCollAmount"];
  string fixed_amount = 14 [json_name = "fixedAmount"];
  string max_amount = 15 [json_name = "maxAmount"];
  string mandate_purpose = 16 [json_name = "mandatePurpose"];
  string cdtr_name = 17 [json_name = "cdtrName"];
  string cdtr_org_id = 18 [json_name = "cdtrOrgId"];
  string cdtr_account = 19 [json_name = "cdtrAccount"];
  string cdtr_account_type = 20 [json_name = "cdtrAccountType"];
  string cdtr_account_name = 21 [json_name = "cdtrAccountName"];
  string cdtr_bank_code = 22 [json_name = "cdtrBankCode"];
  string dbtr_name = 23 [json_name = "dbtrName"];
  string dbtr_id = 24 [json_name = "dbtrId"];
  string dbtr_account = 25 [json_name = "dbtrAccount"];
  string dbtr_account_type = 26 [json_name = "dbtrAccountType"];
  string dbtr_account_name = 27 [json_name = "dbtrAccountName"];
  string dbtr_bank_code = 28 [json_name = "dbtrBankCode"];
  string billing_rltd_id = 29 [json_name = "billingRltdId"];
  string channel_id = 30 [json_name = "channelId"];
  string billing_disp_name = 31 [json_name = "billingDispName"];
  string service_id = 32 [json_name = "serviceId"];
  string flag_retry = 33 [json_name = "flagRetry"];
  string max_retry = 34 [json_name = "maxRetry"];
}



message BifastResponse {
    BifastResponseData response = 1 [json_name = "response"];
  }
  
message BifastResponseData {
  string error_code = 1 [json_name = "errorCode"];
  string response_code = 2 [json_name = "responseCode"];
  string response_message = 3 [json_name = "responseMessage"];
  Data data = 4;

  message Data {
      string mandate_id = 1 [json_name = "mandateId"];
      string end_to_end_id = 2 [json_name = "endToEndId"];
  }
}

message Notification {
  repeated uint64 user_ids = 1;
  repeated uint64 role_ids = 2;
  string step = 3;
  google.protobuf.Timestamp created_date_time = 4;
};

message Fee {
  string amount = 1 [json_name = "amount"];
  string acc = 2 [json_name = "acc"];
}